[package]
name = "j2534-mrw"
version = "0.3.5"
authors = ["Altenius <jacobjm18@gmail.com>", "MRW <171420035+MRWGNRRR@users.noreply.github.com>"]
keywords = ["cars", "tuning", "passthru"]
categories = ["external-ffi-bindings", "hardware-support"]
description = "PassThru (SAE J2534) bindings."
documentation = "https://docs.rs/j2534-mrw"
repository = "https://github.com/MRWGNRRR/j2534-rs"
license = "MIT"
readme = "README.md"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
default-target = "i686-pc-windows-msvc"

# [badges]
# maintenance = { status = "passively-maintained" }

[dependencies]
libc = "0.2"
bitflags = "1.2"
libloading = "0.6"
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.8"